CustomGlobalMarkup upgraded to Liferay 6.1